fix searchbar's uneven margin. I thought I'd committed this already. Sihgh.

--- a/less/components/navbar.less
+++ b/less/components/navbar.less
@@ -192,7 +192,6 @@
     @media (max-width:1400px) {
         .search input,
         .search input:hover {
-            margin-top: 4px;
             .transitions;
         }
         li {
